--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,11 +1,13 @@
 html,
 body,
-#root {
+#root,
+/* created by fluentUI*/
+#root > div {
   height: 100%;
   width: 100%;
 }
 
-#root {
+#root > div {
   display: grid;
   grid-template-areas:
     'header header'
@@ -22,5 +24,4 @@ footer {
 }
 main {
   grid-area: main;
-  background-color: #d6dce6;
 }
