--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,10 +1,12 @@
 html,
 body,
-#root,
-/* created by fluentUI*/
-#root > div {
+#root {
   height: 100%;
   width: 100%;
+}
+
+#root > div {
+  min-height: 100%;
 }
 
 #root > div {
