--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -2,6 +2,9 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .TreePanel {
@@ -12,4 +15,11 @@
   top: 0;
   left: 0;
   z-index: 300;
+}
+
+.Preview {
+  height: calc(100% - 60px);
+  width: 700px;
+  background-color: rgba(137, 43, 226, 0.099);
+  margin: 50px;
 }
