--- a/src/app/common.css
+++ b/src/app/common.css
@@ -3,16 +3,18 @@ a {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 40px;
   font-weight: 400;
+  margin-bottom: 40px;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 20px;
   font-weight: 400;
+  margin-bottom: 20px;
 }
 
 h3 {
-  font-size: 1em;
+  font-size: 15px;
   font-weight: 400;
 }
