--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -27,7 +27,7 @@
   margin: 50px;
 }
 
-.ComponentPanel {
+.CompPanel {
   border-left: 1px solid rgba(133, 133, 20, 0.447);
   position: absolute;
   height: 100%;
