--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -19,6 +19,12 @@
   z-index: 300;
 }
 
+.TreePanel > .addCompButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .Preview {
   height: calc(100% - 60px);
   width: 700px;
