--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -12,7 +12,8 @@
   background-color: rgba(31, 28, 28, 0.429);
   border-right: 1px solid rgba(133, 133, 20, 0.447);
   position: absolute;
-  width: 200px;
+  width: 300px;
+  overflow: auto;
   height: 100%;
   top: 0;
   left: 0;
@@ -23,6 +24,11 @@
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+.TreePanel .leafIcons {
+  width: 32px;
+  height: 32px;
 }
 
 .Preview {
