--- a/src/pages/form-constructor/tree-panel/ui/index.css
+++ b/src/pages/form-constructor/tree-panel/ui/index.css
@@ -38,7 +38,8 @@
 }
 
 .TreePanel .TreeLeaf:hover .treeLeafBackgroundColor {
-  background-color: rgba(255, 255, 255, 0.103);
+  background-color: var(--themePrimary);
+  opacity: 0.2;
 }
 
 .TreePanel .TreeLeaf:focus .treeLeafBackgroundColor {
