--- a/src/pages/form-constructor/tree-panel/ui/index.css
+++ b/src/pages/form-constructor/tree-panel/ui/index.css
@@ -22,6 +22,7 @@
 
 .TreePanel .treeLeafContent {
   position: relative;
+  cursor: pointer;
 }
 
 .TreeLeaf .treeLeafBackgroundColor {
@@ -32,14 +33,15 @@
   height: calc(100% - 4px);
 }
 
-.TreeLeaf.picked .TreeLeaf .treeLeafBackgroundColor {
+.TreeLeaf.picked .treeLeafContent div.treeLeafBackgroundColor {
   background-color: var(--themePrimary);
+  opacity: 0.3;
   z-index: 0;
 }
 
 .TreePanel .TreeLeaf:hover .treeLeafBackgroundColor {
   background-color: var(--themePrimary);
-  opacity: 0.2;
+  opacity: 0.15;
 }
 
 .TreePanel .TreeLeaf:focus .treeLeafBackgroundColor {
