--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -18,7 +18,7 @@
 }
 
 .Preview {
-  height: calc(100% - 60px);
+  min-height: calc(100% - 100px);
   min-width: 300px;
   margin: 50px;
   background-color: var(--white);
