--- a/src/pages/form-constructor/index.css
+++ b/src/pages/form-constructor/index.css
@@ -1,4 +1,5 @@
 .FormConstructor {
+  padding-top: calc(var(--headerHeight) * 1px);
   width: 100%;
   height: 100%;
   position: relative;
@@ -9,26 +10,28 @@
 }
 
 .TreePanel {
-  position: absolute;
+  position: fixed;
   width: 300px;
-  height: 100%;
-  top: 0;
+  max-height: calc(100% - var(--headerHeight) * 1px);
+  min-height: calc(100% - var(--headerHeight) * 1px);
+  top: calc(var(--headerHeight) * 1px);
   left: 0;
   z-index: 300;
 }
 
 .Preview {
-  height: calc(100% - 60px);
+  min-height: calc(100% - 60px);
   min-width: 300px;
   margin: 50px;
   background-color: var(--white);
 }
 
 .CompPanel {
-  position: absolute;
-  height: 100%;
+  position: fixed;
+  max-height: calc(100% - var(--headerHeight) * 1px);
+  min-height: calc(100% - var(--headerHeight) * 1px);
   width: 300px;
   background-color: var(--white);
-  top: 0;
+  top: calc(var(--headerHeight) * 1px);
   right: 0;
 }
