--- a/src/components/field-error/index.css
+++ b/src/components/field-error/index.css
@@ -2,3 +2,26 @@
   min-height: 1em;
   color: var(--errorColor, #ff8080);
 }
+
+.FieldErrorPositionRelative {
+  position: relative;
+}
+
+.FieldErrorPositionRelative .FieldError {
+  position: absolute;
+  bottom: 0;
+  transform: translateY(calc(100% + 1px));
+  width: 100%;
+  left: 0;
+  background: var(--neutralLighter);
+  border-radius: 3px;
+  padding: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.062);
+  box-shadow: 0px 1px 13px rgba(34, 34, 34, 0.16);
+  z-index: 1;
+  box-sizing: border-box;
+}
+
+.FieldErrorPositionRelative .FieldError:empty {
+  display: none;
+}
