--- a/src/shared/validator-picker/ui/validator-picker.css
+++ b/src/shared/validator-picker/ui/validator-picker.css
@@ -6,7 +6,7 @@
 }
 
 .ValidatorPicker.notEmpty .wrapper {
-  height: 250px;
+  min-height: 250px;
 }
 
 .ValidatorPicker .wrapper {
@@ -27,4 +27,16 @@
   opacity: 0.2;
   pointer-events: none;
   box-sizing: border-box;
+}
+
+.ValidatorPicker .type {
+  min-width: 25px;
+  min-height: 25px;
+  background-color: var(--black);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  opacity: 0.3;
 }
