contextual menu refactoring

--- a/src/shared/tree/ui/tree.css
+++ b/src/shared/tree/ui/tree.css
@@ -41,6 +41,9 @@
   z-index: 1;
   margin: 2px;
   height: 32px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .TreeLeaf .treeLeafText.addOneButtonSpace {
