--- a/src/shared/validator-picker/ui/validator-picker.css
+++ b/src/shared/validator-picker/ui/validator-picker.css
@@ -23,8 +23,8 @@
   border-radius: 2px;
   width: 100%;
   height: 100%;
-  border: 2px solid var(--themePrimary);
-  opacity: 0.2;
+  border: 1px solid var(--black);
+  opacity: 1;
   pointer-events: none;
   box-sizing: border-box;
 }
