--- a/src/shared/loading-aria/ui/loading-area.css
+++ b/src/shared/loading-aria/ui/loading-area.css
@@ -5,6 +5,7 @@
 .spinnerContainer {
   opacity: 0;
   left: 50%;
+  transform: translateX(-50%);
   transition: 0.3s opacity ease-in;
   position: absolute;
   z-index: 100;
