collapse on dblclick

--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -20,6 +20,7 @@
 }
 
 .FormConstructor .addCompButton {
+  display: var(--treePanelWidth_expanded, none);
   position: fixed;
   top: 59px;
   left: calc(var(--treePanelWidth, 300) * 1px);
