--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -9,11 +9,12 @@
 .TreePanel .ResizeTarget {
   position: absolute;
   top: 50%;
-  right: -2px;
+  right: 0;
+  width: 3px;
   transform: translateY(-50%);
   z-index: 200;
   background-color: var(--themePrimary);
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .TreePanel::-webkit-scrollbar {
