comp panel resize

--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -8,6 +8,7 @@
 }
 
 .TreePanel {
+  transform: translate(var(--treePanelWidth_expanded, calc(-100% + 5px)));
   position: fixed;
   width: calc(var(--treePanelWidth, 300) * 1px);
   min-width: 200px;
@@ -44,7 +45,9 @@
   position: fixed;
   max-height: calc(100% - var(--headerHeight) * 1px);
   min-height: calc(100% - var(--headerHeight) * 1px);
-  width: 300px;
+  width: calc(var(--compPanelWidth, 300) * 1px);
+  min-width: 200px;
+  max-width: 777px;
   background-color: var(--white);
   top: calc(var(--headerHeight) * 1px);
   right: 0;
