--- a/src/pages/form-constructor/comp-panel/ui/comp-panel.css
+++ b/src/pages/form-constructor/comp-panel/ui/comp-panel.css
@@ -4,6 +4,17 @@
   right: 20px;
 }
 
+.CompPanel .ResizeTarget {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 3px;
+  transform: translateY(-50%);
+  z-index: 200;
+  background-color: var(--themePrimary);
+  opacity: 0.7;
+}
+
 h2 {
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
