fix resize on scroll

--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -1,9 +1,9 @@
 .TreePanel {
   background-color: var(--white);
-  z-index: 5;
-  padding: 15px 15px 30vh;
   box-sizing: border-box;
-  overflow: auto !important;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
 }
 
 .TreePanel .ResizeTarget {
@@ -17,6 +17,11 @@
   opacity: 0.7;
 }
 
-.TreePanel::-webkit-scrollbar {
+.TreePanel .treePanelScrollable {
+  padding: 15px 15px 30vh;
+  box-sizing: border-box;
+}
+
+.TreePanel .treePanelScrollable::-webkit-scrollbar {
   display: none;
 }
