--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -17,6 +17,18 @@
   opacity: 0.7;
 }
 
+.FormConstructor .addCompButton {
+  position: absolute;
+  top: 7px;
+  right: 17px;
+  border-radius: 50%;
+  min-width: 50px;
+  max-width: 50px;
+  min-height: 50px;
+  max-height: 50px;
+  z-index: 6;
+}
+
 .TreePanel .treePanelScrollable {
   padding: 15px 15px 30vh;
   box-sizing: border-box;
