--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -32,6 +32,8 @@
 .TreePanel .treePanelScrollable {
   padding: 15px 15px 30vh;
   box-sizing: border-box;
+  height: 100%;
+  overflow: auto !important;
 }
 
 .TreePanel .treePanelScrollable::-webkit-scrollbar {
