--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -2,9 +2,14 @@
   position: relative;
   background-color: var(--neutralLighter);
   overflow: hidden;
+  display: grid;
+  grid-template-areas: 'treePanel preview compPanel';
+  grid-template-rows: 1fr;
+  grid-template-columns: auto 1fr auto;
 }
 
 .TreePanel {
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   transform: translate(var(--treePanelWidth_expanded, calc(-100% + 5px)));
   position: fixed;
   width: calc(var(--treePanelWidth, 300) * 1px);
@@ -17,6 +22,15 @@
   z-index: 4;
 }
 
+.Header {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.PreviewPanel {
+  grid-area: preview;
+  position: relative;
+}
+
 .Preview {
   position: absolute;
   min-width: 300px;
@@ -26,6 +40,7 @@
 }
 
 .CompPanel {
+  box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   max-height: calc(100% - var(--headerHeight) * 1px);
   min-height: calc(100% - var(--headerHeight) * 1px);
