--- a/src/shared/contextual-menu/contextual-menu.css
+++ b/src/shared/contextual-menu/contextual-menu.css
@@ -7,10 +7,10 @@
 }
 
 .CompContextualMenu a {
-  width: 32px;
-  height: 32px;
-  width: 100%;
-  height: 100%;
+  max-width: 32px;
+  max-height: 32px;
+  min-width: 32px;
+  min-height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
