--- a/src/pages/form-constructor/comp-panel/ui/comp-panel.css
+++ b/src/pages/form-constructor/comp-panel/ui/comp-panel.css
@@ -20,11 +20,12 @@
 .CompPanel .ResizeTarget {
   position: absolute;
   top: 50%;
-  left: 0;
-  width: 3px;
+  left: -5px;
+  height: 100%;
+  width: 5px;
   transform: translateY(-50%);
   z-index: 200;
-  background-color: var(--themePrimary);
+  background-color: transparent;
   opacity: 0.7;
 }
 
