--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -1,9 +1,11 @@
 .TreePanel {
+  /* padding-right: 5px; */
   background-color: var(--white);
   box-sizing: border-box;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr;
+  overflow: visible;
 }
 
 .TreePanel .treePanelScrollable {
@@ -20,11 +22,12 @@
 .TreePanel .ResizeTarget {
   position: absolute;
   top: 50%;
-  right: 0;
-  width: 3px;
+  height: 100%;
+  right: -5px;
+  width: 5px;
   transform: translateY(-50%);
-  z-index: 200;
-  background-color: var(--themePrimary);
+  z-index: 1;
+  background-color: transparent;
   opacity: 0.7;
 }
 
