--- a/src/shared/binding-setter/ui/binding-setter.css
+++ b/src/shared/binding-setter/ui/binding-setter.css
@@ -25,15 +25,13 @@
   box-sizing: border-box;
 }
 
-.BindingSetter .type {
+.BindingSetter .label {
   min-width: 25px;
   min-height: 25px;
-  background-color: var(--black);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--white);
-  opacity: 0.3;
   line-height: 0.7em;
 }
