--- a/src/shared/theme/ui/theme.css
+++ b/src/shared/theme/ui/theme.css
@@ -17,3 +17,23 @@
 .violetBackground {
   background-color: var(--violet);
 }
+
+.redBackground02 {
+  background-color: var(--red02);
+}
+
+.blueBackground02 {
+  background-color: var(--blue02);
+}
+
+.greenBackground02 {
+  background-color: var(--green02);
+}
+
+.yellowBackground02 {
+  background-color: var(--yellow02);
+}
+
+.violetBackground02 {
+  background-color: var(--violet02);
+}
