--- a/src/shared/binding-setter/ui/tree-leaf.css
+++ b/src/shared/binding-setter/ui/tree-leaf.css
@@ -4,3 +4,15 @@
 .BindingTreeLeaf.isSelected .ms-Dropdown-caretDown {
   color: var(--themePrimary);
 }
+
+.BindingSetter .NewTreeLeaf .label {
+  min-width: 24px;
+  min-height: 24px;
+  border-radius: 50%;
+  margin: 0 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  line-height: 0.7em;
+}
