--- a/src/shared/event-binding-editor/ui/tree-leaf.css
+++ b/src/shared/event-binding-editor/ui/tree-leaf.css
@@ -5,7 +5,7 @@
   color: var(--themePrimary);
 }
 
-.BindingSetter .NewTreeLeaf .label {
+.BindingEditor .NewTreeLeaf .label {
   min-width: 24px;
   min-height: 24px;
   border-radius: 50%;
