--- a/src/app/toast.css
+++ b/src/app/toast.css
@@ -2,7 +2,7 @@ body {
   --toastify-color-light: var(--white);
   --toastify-color-dark: var(--black);
   --toastify-color-info: #3498db;
-  --toastify-color-success: #07bc0c;
+  --toastify-color-success: var(--green);
   --toastify-color-warning: #f1c40f;
   --toastify-color-error: #e74c3c;
   --toastify-color-transparent: rgba(255, 255, 255, 0.7);
@@ -139,7 +139,7 @@ body {
 
 .Toastify--animate {
   animation-fill-mode: both;
-  animation-duration: 0.7s;
+  animation-duration: 0.3s;
 }
 
 .Toastify--animate-icon {
