add tree search

--- a/src/shared/tree/ui/tree.css
+++ b/src/shared/tree/ui/tree.css
@@ -133,3 +133,8 @@ div.NewTreeLeaf.isSelected .treeLeafContent {
 .NewTreeLeaf .button {
   margin: 2px;
 }
+
+.NewTreeLeaf .query {
+  background-color: var(--black);
+  color: var(--white);
+}
