--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -51,3 +51,24 @@
   right: 0;
   z-index: 4;
 }
+
+.FormConstructor .addCompButton {
+  position: absolute;
+  top: 16px;
+  right: 24px;
+  border-radius: 50%;
+  min-width: 50px;
+  max-width: 50px;
+  min-height: 50px;
+  max-height: 50px;
+  z-index: 6;
+}
+
+.FormConstructor .treeSearchBox {
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  min-width: calc(100% - 24px - 24px - 24px - 50px);
+  max-width: calc(100% - 24px - 24px - 24px - 50px);
+  z-index: 6;
+}
