--- a/src/pages/form-constructor/tree-panel/ui/tree-panel.css
+++ b/src/pages/form-constructor/tree-panel/ui/tree-panel.css
@@ -21,7 +21,7 @@
 }
 
 .TreePanel .treePanelScrollable {
-  padding: 24px 24px 30vh;
+  padding: calc(24px + 32px + 24px) 24px 30vh;
   box-sizing: border-box;
   height: 100%;
   overflow: auto !important;
@@ -41,16 +41,4 @@
   z-index: 1;
   background-color: transparent;
   opacity: 0.7;
-}
-
-.FormConstructor .addCompButton {
-  position: absolute;
-  top: 18px;
-  right: 12px;
-  border-radius: 50%;
-  min-width: 50px;
-  max-width: 50px;
-  min-height: 50px;
-  max-height: 50px;
-  z-index: 6;
 }
