--- a/src/app/index.css
+++ b/src/app/index.css
@@ -3,9 +3,20 @@ body,
 #root,
 .themeProvider {
   min-height: 100%;
+  max-height: 100%;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr;
+}
+
+.RootScrollbar {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+}
+
+.RootScrollbar > .ps__rail-y {
+  z-index: 301;
 }
 
 .headerOnlyLayout {
@@ -44,6 +55,6 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 300;
   height: calc(var(--headerHeight) * 1px);
 }
