--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -23,7 +23,7 @@
 }
 
 .Header {
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0 7px rgba(0, 0, 0, 0.35);
 }
 
 .PreviewPanel {
