--- a/src/pages/form-constructor/form-constructor.css
+++ b/src/pages/form-constructor/form-constructor.css
@@ -21,6 +21,9 @@
   left: 0;
   z-index: 4;
 }
+.TreePanel.isFocused {
+  box-shadow: 0 0 10px var(--themePrimary01);
+}
 
 .Header {
   box-shadow: 0px 0 7px rgba(0, 0, 0, 0.35);
@@ -50,6 +53,9 @@
   top: calc(var(--headerHeight) * 1px);
   right: 0;
   z-index: 4;
+}
+.FormConstructor .isFocused .CompPanel {
+  box-shadow: 0 0 10px var(--themePrimary01);
 }
 
 .FormConstructor .addCompButton {
