--- a/src/pages/form-constructor/preview/ui/preview.css
+++ b/src/pages/form-constructor/preview/ui/preview.css
@@ -1,4 +1,5 @@
 .Preview .wrapper {
+  --borderThickness: 1.5px;
   position: relative;
 }
 
@@ -9,4 +10,15 @@
   height: 100%;
   z-index: 2;
   pointer-events: none;
+}
+
+.selectorArea * {
+  border: var(--borderThickness) solid var(--themePrimary);
+  box-sizing: border-box;
+}
+
+.hoverArea * {
+  transform: translate(calc(var(--borderThickness) * -1), calc(var(--borderThickness) * -1));
+  border: var(--borderThickness) dashed var(--themePrimary);
+  box-sizing: content-box;
 }
