--- a/src/shared/binding-editor/ui/tree-node.css
+++ b/src/shared/binding-editor/ui/tree-node.css
@@ -5,7 +5,7 @@
   color: var(--themePrimary);
 }
 
-.BindingEditor .NewTreeLeaf .label {
+.BindingEditor .TreeNodeContent .label {
   min-width: 24px;
   min-height: 24px;
   border-radius: 50%;
