--- a/src/pages/form-constructor/palette-modal/ui/palette-modal.css
+++ b/src/pages/form-constructor/palette-modal/ui/palette-modal.css
@@ -1,10 +1,7 @@
-.PaletteModal .container {
-}
-
 .PaletteModal .rootContainer {
   width: 70vw;
   height: 50vh;
-  padding: 32px 24px 0;
+  padding: 32px 0 0;
 }
 
 .PaletteModal .container {
@@ -15,5 +12,13 @@
 }
 
 .PaletteModal .container > * {
+  margin: 10px;
+}
+
+.PaletteModal .buttons {
+  padding: 0 0 0 15px;
+}
+
+.PaletteModal .buttons > * {
   margin: 10px;
 }
