--- a/src/app/index.css
+++ b/src/app/index.css
@@ -50,11 +50,12 @@ main {
 }
 
 .Header {
-  background-color: var(--neutralLighterAlt);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 300;
+  background-color: var(--white);
+  border-bottom: 1px solid var(--black02);
   height: calc(var(--headerHeight) * 1px);
 }
