--- a/src/shared/dimension/ui/dimension.css
+++ b/src/shared/dimension/ui/dimension.css
@@ -1,11 +1,12 @@
-.DimensionTree .dimensionFactory .dimensionFactory {
-  margin-left: 24px;
+.Dimension table,
+.Dimension tbody {
+  width: 100%;
 }
 
 .Dimension td {
-  padding: 12px 8px 12px 0;
+  padding: 12px;
 }
 
-.Dimension td > *:not(:first-child) {
-  padding: 12px 0 0 0;
+.Dimension td {
+  border-top: 1px solid var(--black01);
 }
