--- a/src/shared/nav/ui/nav.css
+++ b/src/shared/nav/ui/nav.css
@@ -6,3 +6,9 @@
 .Nav .VerticalTabs .item {
   padding-left: 20px;
 }
+
+.Nav .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
